<?xml version="1.0"?>
<package format="2">
  <name>planner_exploratory</name>
  <version>1.0.0</version>
  <description>Exploratory Path Planner Package</description>
  <maintainer email="leongwjoseph@gmail.com">Joseph Leong</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mur_common</depend>
  <build_depend>roscpp</build_depend>
</package>
